--- a/privacy.html
+++ b/privacy.html
@@ -3,46 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>PAGE TITLE</title>
-  <link rel="stylesheet" href="css/style.css"> <!-- if you have CSS -->
+  <title>Privacy Policy</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p>Privacy Policy for Financialysers
+  <p>At Home Equity Navigator, we respect your privacy. This Privacy Policy explains how we collect, use, and protect your personal information when you use our website.</p>
 
-At Financialysers, your privacy is important to us. This Privacy Policy outlines how we collect, use, and protect your information when you visit our blog.
+  <h2>Information We Collect</h2>
+  <p>We do not collect personally identifiable information unless you voluntarily provide it (e.g., via contact forms). The site may automatically collect non-personal information such as browser type, device information, and usage data.</p>
 
-1. Information We Collect
+  <h2>How We Use Information</h2>
+  <p>We use collected information to improve our website, provide better services, and understand user behavior. We do not sell or share your personal information with third parties.</p>
 
-Personal Information: When you contact us via forms or emails, we may collect your name and email address.
+  <h2>Cookies</h2>
+  <p>Our website may use cookies to enhance user experience. You can disable cookies in your browser settings, but some features of the website may not work properly.</p>
 
-Non-Personal Information: We may collect anonymous data such as browser type, device information, and website usage patterns through Google Analytics.
+  <h2>Third-Party Services</h2>
+  <p>We may use third-party services like Google AdSense to display ads. These services may collect information automatically as described in their privacy policies.</p>
 
-2. How We Use Your Information
+  <h2>Changes to This Policy</h2>
+  <p>We may update this Privacy Policy from time to time. Please check this page periodically for updates.</p>
 
-To respond to your inquiries or messages.
-
-To improve our website and user experience.
-
-To send occasional updates, newsletters, or information if you subscribe.
-
-3. Cookies
-We may use cookies and similar technologies to enhance your experience on our blog. Cookies do not store sensitive information.
-
-4. Third-Party Services
-Our blog may use third-party services such as Google AdSense and Google Analytics, which may collect information about your use of the site.
-
-5. Data Security
-We implement appropriate measures to protect your data from unauthorized access, alteration, disclosure, or destruction.
-
-6. External Links
-Our website may contain links to other sites. We are not responsible for the privacy practices of these external websites.
-
-7. Consent
-By using our website, you consent to our Privacy Policy.
-
-8. Updates
-We may update this policy periodically. Changes will be posted on this page.</p>
+  <p>By using our website, you agree to the terms of this Privacy Policy.</p>
   <a href="index.html">Back to Home</a>
 </body>
 </html>
+
