--- a/index.html
+++ b/index.html
@@ -988,5 +988,15 @@
         };
 
     </script>
+    <footer>
+        <footer style="text-align:center; padding:20px; background:#f1f1f1;">
+  <p>
+    <a href="privacy.html">Privacy Policy</a> | 
+    <a href="about.html">About Us</a> | 
+    <a href="contact.html">Contact Us</a>
+  </p>
+  <p>&copy; 2025 Home Equity Navigator. All rights reserved.</p>
+</footer>
 </body>
+
 </html>
