--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
         }
         .chat-open { animation: slideIn 0.3s ease-out forwards; }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8184403935137913"
+     crossorigin="anonymous"></script>
 </head>
 <body class="bg-stone-50 text-stone-800 font-sans antialiased selection:bg-teal-100 selection:text-teal-900">
 
@@ -1000,3 +1002,4 @@
 </body>
 
 </html>
+
